--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ drf-spectacular = "^0.24.2"
 django-debug-toolbar = "^3.8.1"
 python-dotenv = "^0.21.0"
 debugpy = "^1.6.4"
+pre-commit = "^2.20.0"
+isort = "^5.11.1"
+autoflake = "^2.0.0"
 
 
 [build-system]
