added model_extractor utils function and updated example.env

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,6 @@ repos:
 
   - id: isort
     name: isort
-    entry: poetry run isort
+    entry: poetry run isort .
     language: system
     types: [python]
