--- a/example.env
+++ b/example.env
@@ -1,8 +1,7 @@
-DEBUG = val
-ALLOWED_HOSTS = val
-DJANGO_SETTINGS_MODULE = val
-SECRET_KEY = val
-DJANGO_TOKEN_KEY = val
+DEBUG = # boolean i.e True or False
+ALLOWED_HOSTS = # comma separated string i.e "127.0.0.1, localhost, 196.128.3.80"
+SECRET_KEY = # string i.e "049*ufi-insecurrbb-(ka_u3e2!u!1e*r0n6=3^iklth-j*dw+759hyub1@6&rez2s"
+DJANGO_SETTINGS_MODULE = # string i.e to core settings "speedpay.settings"
 
 DB_PORT = val
 DB_PASSWORD = val
