--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ dmypy.json
 .DS_Store
 .vscode/PythonImportHelper-v2-Completion.json
 .vscode/PythonImportHelper-v2-Completion.json
+*.__pycache__
