--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pre-commit = "^2.20.0"
 isort = "^5.11.1"
 autoflake = "^2.0.0"
 mysqlclient = "^2.1.1"
+pytest-django = "^4.5.2"
 
 
 [build-system]
