initial test creation for users api

--- a/example.env
+++ b/example.env
@@ -1,10 +1,10 @@
-DEBUG = # boolean i.e True or False
+DEBUG = # boolean i.e True, true, 1, yes [for true values]
 ALLOWED_HOSTS = # comma separated string i.e "127.0.0.1, localhost, 196.128.3.80"
 SECRET_KEY = # string i.e "049*ufi-insecurrbb-(ka_u3e2!u!1e*r0n6=3^iklth-j*dw+759hyub1@6&rez2s"
-DJANGO_SETTINGS_MODULE = # string i.e to core settings "speedpay.settings"
+DJANGO_SETTINGS_MODULE = # string i.e to core settings "speedpay.core.settings"
 
-DB_PORT = val
-DB_PASSWORD = val
-DB_USER = val
-DB_HOST = val
-DB_NAME = val
+DB_PORT = # 5432
+DB_PASSWORD = # 8942hg8wgvuuibvfwr
+DB_USER = # postgres
+DB_HOST = # 192.168.121.4
+DB_NAME = # database
