--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-addopts = --ds=config.tests.test --reuse-db
+addopts = -vv -x --lf --ds=config.settings.test_settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
