--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,10 @@ repos:
     entry: poetry run isort .
     language: system
     types: [python]
+
+  - id: pytest-check
+    name: pytest-check
+    entry: poetry run pytest .
+    language: system
+    pass_filenames: false
+    always_run: true
