--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ isort = "^5.11.1"
 autoflake = "^2.0.0"
 mysqlclient = "^2.1.1"
 pytest-django = "^4.5.2"
+pytest-cov = "^4.0.0"
 
 
 [build-system]
